# SimpleNeuralNetwork

./: CMakeLists.txt  DefaultConfigBreastCancer.json  DefaultConfigIris.json  README.md  main.cpp
Dataset/: breast-cancer-dataset.csv  breast-cancer-token.json  iris-token.json
NeuralNetwork/: Activation.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  Neuron.hpp  json.hpp
Preprocessing/: Dataset.cpp  Dataset.hpp
